fix for #18: Interface elements too small

--- a/sites/ucsf/scss/_footer.scss
+++ b/sites/ucsf/scss/_footer.scss
@@ -1,13 +1,12 @@
 .main-footer {
-    display:block;
-    font-size:.80em;
-    height:28px;
-    margin:25px 0 15px;
+    display: block;
+    height: 28px;
+    margin: 25px 0 15px;
     overflow:visible;
-    padding: 1em;
-    position:relative;
-    text-align:center;
-    width:auto;
+    padding: 0.5em;
+    position: relative;
+    text-align: center;
+    width: auto;
 }
 
 .main-footer,
