--- a/sites/ucsf/scss/mainPage.scss
+++ b/sites/ucsf/scss/mainPage.scss
@@ -3,10 +3,6 @@
         width: 57px;
         height: 57px;
     }
-
-    .front li a {
-        font-size: 80%;
-    }
 }
 
 .front {
